# deep_eval_demo

./: .coze  .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt
examples/: run_demo.py  run_office_agent.py
offline-pev-customer-agent/: .coze
report/: DeepEval.1.0.md  improve_plan.md
src/customer_agent/: __init__.py  agent.py  mock_llm.py  policies.py  tools.py
src/office_agent/: __init__.py  base.py  executor.py  human_loop.py  office_agent.py  planner.py  scenarios.py  verify.py
src/office_agent/sub_agents/: __init__.py  api_agent.py  browser_agent.py  data_agent.py  doc_agent.py  registry.py  visualization_agent.py
tests/: conftest.py
tests/evals/: customer_agent_rubrics.py  customer_support_goldens.json  office_agent_goldens.json  office_agent_rubrics.py  test_customer_agent.py  test_office_agent.py
