[project]
name = "deep-eval-demo"
version = "0.1.0"
description = "Offline LangGraph customer support agent with DeepEval evals."
requires-python = ">=3.10"
dependencies = [
  "deepeval==4.0.0",
  "langchain>=0.3,<0.4",
  "langgraph>=0.2,<0.3",
  "pytest>=9.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
